--- a/Dapp/package.json
+++ b/Dapp/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.7.1",
     "@capacitor/android": "4.5.0",
     "@capacitor/app": "4.1.1",
     "@capacitor/core": "4.5.0",
@@ -24,6 +25,7 @@
     "axios": "^1.1.3",
     "dotenv": "^16.0.3",
     "ethers": "^5.7.2",
+    "graphql": "^16.6.0",
     "history": "^4.9.0",
     "ionicons": "^6.0.3",
     "react": "^18.2.0",
@@ -33,6 +35,7 @@
     "react-router-dom": "^5.2.0",
     "swiper": "^8.4.4",
     "typescript": "^4.1.3",
+    "wagmi": "^0.8.8",
     "web-vitals": "^0.2.4",
     "web3.storage": "^4.4.0",
     "workbox-background-sync": "^5.1.4",
