--- a/Contracts/package.json
+++ b/Contracts/package.json
@@ -13,6 +13,7 @@
     "hardhat": "^2.12.2"
   },
   "dependencies": {
+    "@nomiclabs/hardhat-etherscan": "^3.1.3",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
     "dotenv": "^16.0.3"
   }
