--- a/Server/package.json
+++ b/Server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon app.js",
-    "build": "webpack"
+    "build": "react-scripts build"
   },
   "author": "",
   "license": "ISC",
