--- a/Server/package.json
+++ b/Server/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js",
-    "build": "react-scripts build"
+    "start": "nodemon app.js"
   },
   "author": "",
   "license": "ISC",
@@ -18,6 +17,5 @@
     "express": "^4.18.2",
     "mongoose": "^6.7.2",
     "nodemon": "^2.0.20",
-    "react-scripts": "^5.0.1"
   }
 }
