--- a/Server/package.json
+++ b/Server/package.json
@@ -16,6 +16,6 @@
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "mongoose": "^6.7.2",
-    "nodemon": "^2.0.20",
+    "nodemon": "^2.0.20"
   }
 }
